--- a/examples/tag_demux.ipynb
+++ b/examples/tag_demux.ipynb
@@ -350,6 +350,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cell_tag_counts"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -365,7 +374,7 @@
    "outputs": [],
    "source": [
     "# Plot a histogram of total tag counts\n",
-    "plotting.plot_histogram(cell_tag_counts.sum(axis=1), num_bins=1000, interactive=True, x_axis_title=\"Num tag reads in a cell\", y_axis_title=\"# Cells\")"
+    "plotting.plot_histogram(cell_tag_counts.sum(axis=1), num_bins=1000, interactive=True, x_axis_title=\"Num total tag reads in a cell\", y_axis_title=\"# Cells\")"
    ]
   },
   {
@@ -435,15 +444,6 @@
     "        title=\"%s Count Distribution\" % tag\n",
     "    )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
