Added additional tag inspection code to tag demux example

--- a/examples/tag_demux.ipynb
+++ b/examples/tag_demux.ipynb
@@ -25,6 +25,7 @@
     "import os\n",
     "\n",
     "import numpy\n",
+    "import pandas\n",
     "\n",
     "from pepars.utils import Illumina_FASTQ_File_Set\n",
     "from pepars.fileio import fileio\n",
@@ -435,14 +436,154 @@
    },
    "outputs": [],
    "source": [
+    "top_cell_tag_counts = cell_tag_counts[cell_tag_counts.sum(axis=1) > TAG_COUNT_CUTOFF]\n",
+    "\n",
     "for tag in cell_tag_counts.columns:\n",
     "    plotting.plot_histogram(\n",
-    "        cell_tag_counts[cell_tag_counts.sum(axis=1) > TAG_COUNT_CUTOFF][tag],\n",
+    "        top_cell_tag_counts[tag],\n",
     "        interactive=True,\n",
     "        num_bins=1000,\n",
     "        log_scale=False,\n",
     "        title=\"%s Count Distribution\" % tag\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's get a view of the data for highest tag and counts for each cell\n",
+    "\n",
+    "NUM_TOP_TAGS = 3\n",
+    "\n",
+    "count_columns = []\n",
+    "columns = []\n",
+    "\n",
+    "for tag_index in range(NUM_TOP_TAGS):\n",
+    "    count_column_name = \"Tag %i count\" % (tag_index + 1)\n",
+    "    columns.append(\"Tag %i\" % (tag_index + 1))\n",
+    "    columns.append(count_column_name)\n",
+    "    \n",
+    "columns.append(\"SD\")\n",
+    "\n",
+    "top_tags = pandas.DataFrame(columns=columns, index=top_cell_tag_counts.index)\n",
+    "\n",
+    "for cell_row in top_cell_tag_counts.iterrows():\n",
+    "    cell_barcode = cell_row[0]\n",
+    "    tag_counts = [(x[0], x[1]) for x in cell_row[1].items()]\n",
+    "    sorted_tag_counts = sorted(tag_counts, key=lambda x: x[1], reverse=True)\n",
+    "    \n",
+    "    tag_count_row = []\n",
+    "    \n",
+    "    for tag, count in sorted_tag_counts[0:NUM_TOP_TAGS]:\n",
+    "        tag_count_row.append(tag)\n",
+    "        tag_count_row.append(count)\n",
+    "        \n",
+    "    tag_count_row.append(numpy.std([x[1] for x in sorted_tag_counts]))\n",
+    "        \n",
+    "    top_tags.loc[cell_barcode] = pandas.Series(tag_count_row, name=cell_barcode, index=columns)\n",
+    "\n",
+    "top_tags[\"FC\"] = ((new_df[\"Tag 1 count\"] + 1) / (new_df[\"Tag 2 count\"] + 1)).astype(numpy.float32)\n",
+    "top_tags[\"L2FC\"] = numpy.log2(top_tags[\"FC\"])\n",
+    "top_tags[\"Delta\"] = new_df[\"Tag 1 count\"] - new_df[\"Tag 2 count\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_tags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plotting.plot_histogram(\n",
+    "    top_tags[\"Delta\"],\n",
+    "    interactive=True,\n",
+    "    num_bins=100,\n",
+    "    x_axis_title=\"Difference between top and 2nd tag\",\n",
+    "    y_axis_title=\"# Cells\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plotting.plot_histogram(\n",
+    "    top_tags[\"FC\"],\n",
+    "    interactive=True,\n",
+    "    num_bins=500,\n",
+    "    x_axis_title=\"FC between top and 2nd tag\",\n",
+    "    y_axis_title=\"# Cells\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plotting.plot_histogram(\n",
+    "    top_tags[\"L2FC\"],\n",
+    "    interactive=True,\n",
+    "    num_bins=100,\n",
+    "    x_axis_title=\"L2FC between top and 2nd tag\",\n",
+    "    y_axis_title=\"# Cells\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plotting.plot_histogram(\n",
+    "    top_tags[\"SD\"],\n",
+    "    interactive=True,\n",
+    "    num_bins=100,\n",
+    "    x_axis_title=\"Variance of tag counts\",\n",
+    "    y_axis_title=\"# Cells\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get tag statistics based on a Fold Change cutoff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FC_CUTOFF = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tag_statistics = pandas.DataFrame(index=cell_tag_counts.columns, columns=[\"Num Cells\", \"Num Cells Top\", \"% Top Cells Valid\"])\n",
+    "for tag in cell_tag_counts.columns:\n",
+    "    tag_statistics.loc[tag][\"Num Cells\"] = cell_tag_counts[tag][cell_tag_counts[tag] > 0].shape[0]\n",
+    "    tag_statistics.loc[tag][\"Num Cells Top\"] = top_tags[top_tags[\"Tag 1\"] == tag].shape[0]\n",
+    "    tag_statistics.loc[tag][\"% Top Cells Valid\"] = top_tags[(top_tags[\"Tag 1\"] == tag) & (top_tags[\"FC\"] > FC_CUTOFF)].shape[0]\n",
+    "    tag_statistics.loc[tag][\"% Top Cells Valid\"] = tag_statistics.loc[tag][\"% Top Cells Valid\"] / tag_statistics.loc[tag][\"Num Cells Top\"]\n",
+    "    tag_statistics"
    ]
   }
  ],
