Add ability to choose custom cell barcode list

--- a/examples/tag_demux.ipynb
+++ b/examples/tag_demux.ipynb
@@ -30,13 +30,14 @@
     "from pepars.utils import Illumina_FASTQ_File_Set\n",
     "from pepars.fileio import fileio\n",
     "from pepars.analysis import sequencing_reads as sequencing_reads_analysis\n",
+    "from pepars.utils import Sequence_Trie\n",
     "\n",
     "from pepars.plotting import plotting\n",
     "from pepars.plotting import DNA as DNA_plotting\n",
     "plotting.init_notebook_mode()\n",
     "\n",
-    "from scrap import chromium\n",
-    "from scrap import tags"
+    "from scrapi import chromium\n",
+    "from scrapi import tags"
    ]
   },
   {
@@ -219,6 +220,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Choose a custom cell barcode field, or set it to None\n",
+    "CUSTOM_CELL_BARCODES_FILE = None\n",
+    "\n",
+    "if CUSTOM_CELL_BARCODES_FILE is not None:\n",
+    "\n",
+    "    custom_cell_barcodes = Sequence_Trie(allow_invalid=True)\n",
+    "\n",
+    "    with open(CUSTOM_CELL_BARCODES_FILE) as barcodes_file:\n",
+    "        for line in barcodes_file.readlines():\n",
+    "            custom_cell_barcodes.add(line.strip()[:-2])\n",
+    "    \n",
+    "    valid_cell_barcodes = custom_cell_barcodes\n",
+    "else:\n",
+    "    valid_cell_barcodes = VALID_CELL_BARCODES"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -276,7 +299,7 @@
    "source": [
     "cell_tag_counts = tags.get_cell_tag_counts(\n",
     "    FASTQ_file_set,\n",
-    "    valid_cell_barcode_trie=VALID_CELL_BARCODES,\n",
+    "    valid_cell_barcode_trie=valid_cell_barcodes,\n",
     "    valid_tags=VALID_TAGS,\n",
     "    index_sequence=INDEX_SEQUENCE,\n",
     "    maximum_tag_distance=MAXIMUM_TAG_DISTANCE,\n",
@@ -485,9 +508,9 @@
     "        \n",
     "    top_tags.loc[cell_barcode] = pandas.Series(tag_count_row, name=cell_barcode, index=columns)\n",
     "\n",
-    "top_tags[\"FC\"] = ((new_df[\"Tag 1 count\"] + 1) / (new_df[\"Tag 2 count\"] + 1)).astype(numpy.float32)\n",
+    "top_tags[\"FC\"] = ((top_tags[\"Tag 1 count\"] + 1) / (top_tags[\"Tag 2 count\"] + 1)).astype(numpy.float32)\n",
     "top_tags[\"L2FC\"] = numpy.log2(top_tags[\"FC\"])\n",
-    "top_tags[\"Delta\"] = new_df[\"Tag 1 count\"] - new_df[\"Tag 2 count\"]"
+    "top_tags[\"Delta\"] = top_tags[\"Tag 1 count\"] - top_tags[\"Tag 2 count\"]"
    ]
   },
   {
@@ -603,7 +626,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
