Add debris filtering, bump version

--- a/examples/Update Samples.ipynb
+++ b/examples/Update Samples.ipynb
@@ -23,17 +23,44 @@
    "outputs": [],
    "source": [
     "HOST_URL = \"https://scrap.caltech.edu/\"\n",
-    "SEQUENCING_RUN_NAME = \"TTMT11\"\n",
+    "SEQUENCING_RUN_NAME = \"JPMT35\"\n",
     "\n",
     "SAMPLES = [\n",
-    "#     \"ASC-BC3\",\n",
-    "    \"ASC-BC3-V\"\n",
+    "    \"PBMC-MULT-14-1\",\n",
+    "    \"PBMC-MULT-14-2\",\n",
+    "    \"PBMC-MULT-14-3\",\n",
+    "    \"PBMC-MULT-14-4\",\n",
+    "    \"PBMC-MULT-14-5\",\n",
+    "    \"PBMC-MULT-14-6\",\n",
+    "    \"PBMC-MULT-16-1\",\n",
+    "    \"PBMC-MULT-16-2\",\n",
+    "    \"PBMC-MULT-16-3\",\n",
+    "    \"PBMC-MULT-16-4\",\n",
+    "    \"PBMC-MULT-16-5\",\n",
+    "    \"PBMC-MULT-16-6\",\n",
+    "    \"PBMC-MULT-14-1-TAGS\",\n",
+    "    \"PBMC-MULT-14-2-TAGS\",\n",
+    "    \"PBMC-MULT-14-3-TAGS\",\n",
+    "    \"PBMC-MULT-14-4-TAGS\",\n",
+    "    \"PBMC-MULT-14-5-TAGS\",\n",
+    "    \"PBMC-MULT-14-6-TAGS\",\n",
+    "    \"PBMC-MULT-16-1-TAGS\",\n",
+    "    \"PBMC-MULT-16-2-TAGS\",\n",
+    "    \"PBMC-MULT-16-3-TAGS\",\n",
+    "    \"PBMC-MULT-16-4-TAGS\",\n",
+    "    \"PBMC-MULT-16-5-TAGS\",\n",
+    "    \"PBMC-MULT-16-6-TAGS\"\n",
     "]\n",
     "\n",
-    "SAMPLE_FASTQ_PREFIXES = [\n",
-    "#     \"BC3\",\n",
-    "    \"BC3_V\"\n",
-    "]"
+    "# CELL_SET_NAMES = [\n",
+    "#     \"LC2-B-V-2\",\n",
+    "#     \"LM1-B-V\",\n",
+    "#     \"LM1-S-2\"\n",
+    "# ]\n",
+    "\n",
+    "CELL_SET_NAMES = SAMPLES\n",
+    "\n",
+    "SAMPLE_FASTQ_PREFIXES = SAMPLES"
    ]
   },
   {
@@ -50,11 +77,11 @@
     "\n",
     "sample_cell_sets = {}\n",
     "\n",
-    "for sample in SAMPLES:\n",
+    "for sample_index, sample in enumerate(SAMPLES):\n",
     "    cell_set_id = None\n",
     "\n",
     "    for cell_set in cell_sets:\n",
-    "        if cell_set[\"name\"] == sample:\n",
+    "        if cell_set[\"name\"] == CELL_SET_NAMES[sample_index]:\n",
     "            cell_set_id = cell_set[\"_id\"]\n",
     "            break\n",
     "\n",
@@ -107,7 +134,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "S3_SEARCH_DIRECTORY = \"reads/20191117T082947Z_ASC-BC3-V/\"\n",
+    "sequencing_run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "S3_SEARCH_DIRECTORY = \"sequencing_runs/20200116T013344Z_JPMT35-2/200109_A00351_0310_AH2MH3DSXY_10x/JPMT35/\"\n",
     "\n",
     "read_sets_URL = HOST_URL + \"read_sets\"\n",
     "response = requests.get(read_sets_URL, verify=False)\n",
@@ -141,6 +177,7 @@
     "        read_set[\"status\"] = \"available\"\n",
     "        \n",
     "        print(\"Creating read set %s\" % sample_name)\n",
+    "        \n",
     "        response = requests.post(read_sets_URL, json=cell_set, verify=False)\n",
     "        read_set = response.json()\n",
     "        read_set[\"sequencing_run_id\"] = sequencing_run_id\n",
@@ -149,7 +186,7 @@
     "        \n",
     "        response = requests.put(read_sets_URL + \"/%s\" % read_set[\"_id\"], json=read_set, verify=False)\n",
     "        read_set = response.json()\n",
-    "        \n",
+    "    \n",
     "    print(read_set[\"path_id\"])\n",
     "    \n",
     "    destination_files = os.popen('aws s3 ls s3://scrap-dm/reads/%s/' % read_set[\"path_id\"]).read() # list all files found in an S3 folder\n",
