--- a/examples/Add Sample.ipynb
+++ b/examples/Add Sample.ipynb
@@ -22,34 +22,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "HOST_URL = \"https://scrap.caltech.edu/\"\n",
-    "SEQUENCING_RUN_NAME = \"JPMT35\"\n",
+    "HOST_URL = \"https://172.31.1.62/\"\n",
+    "SEQUENCING_RUN_NAME = \"TDMT01\"\n",
     "\n",
     "SAMPLES = [\n",
-    "    \"PBMC-MULT-14-1\",\n",
-    "    \"PBMC-MULT-14-2\",\n",
-    "    \"PBMC-MULT-14-3\",\n",
-    "    \"PBMC-MULT-14-4\",\n",
-    "    \"PBMC-MULT-14-5\",\n",
-    "    \"PBMC-MULT-14-6\",\n",
-    "    \"PBMC-MULT-16-1\",\n",
-    "    \"PBMC-MULT-16-2\",\n",
-    "    \"PBMC-MULT-16-3\",\n",
-    "    \"PBMC-MULT-16-4\",\n",
-    "    \"PBMC-MULT-16-5\",\n",
-    "    \"PBMC-MULT-16-6\",\n",
-    "    \"PBMC-MULT-14-1-TAGS\",\n",
-    "    \"PBMC-MULT-14-2-TAGS\",\n",
-    "    \"PBMC-MULT-14-3-TAGS\",\n",
-    "    \"PBMC-MULT-14-4-TAGS\",\n",
-    "    \"PBMC-MULT-14-5-TAGS\",\n",
-    "    \"PBMC-MULT-14-6-TAGS\",\n",
-    "    \"PBMC-MULT-16-1-TAGS\",\n",
-    "    \"PBMC-MULT-16-2-TAGS\",\n",
-    "    \"PBMC-MULT-16-3-TAGS\",\n",
-    "    \"PBMC-MULT-16-4-TAGS\",\n",
-    "    \"PBMC-MULT-16-5-TAGS\",\n",
-    "    \"PBMC-MULT-16-6-TAGS\"\n",
+    "    \"ASC-C4\",\n",
+    "    \"ASC-TC10\",\n",
+    "    \"ANTEBI-2-BIG\",\n",
+    "    \"ANTEBI-2-SMALL\",\n",
+    "    \"ANTEBI-2-BIG-TAGS\"\n",
     "]\n",
     "\n",
     "# CELL_SET_NAMES = [\n",
@@ -81,32 +62,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for cell_set in cell_sets:\n",
-    "    if \"H2\" in cell_set[\"name\"]:\n",
-    "        break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cell_set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "cell_sets_URL = HOST_URL + \"cell_sets\"\n",
     "\n",
-    "cell_set = {\n",
-    "    \"name\": \"AAV-H2\",\n",
-    "    \"status\": \"available\"\n",
-    "}"
+    "for cell_set_name in CELL_SET_NAMES:\n",
+    "    \n",
+    "    found_cell_set = False\n",
+    "    \n",
+    "    for cell_set in cell_sets:\n",
+    "        if cell_set[\"name\"] == cell_set_name:\n",
+    "            print(\"%s already exists\" % cell_set_name)\n",
+    "            found_cell_set = True\n",
+    "            break\n",
+    "            \n",
+    "    if found_cell_set:\n",
+    "        continue\n",
+    "        \n",
+    "    print(\"Creating cell set %s\" % cell_set_name)\n",
+    "    \n",
+    "    cell_set = {\n",
+    "        \"name\": cell_set_name,\n",
+    "        \"status\": \"available\"\n",
+    "    }\n",
+    "    \n",
+    "    response = requests.post(cell_sets_URL, json=cell_set, verify=False)\n",
+    "    cell_set = response.json()"
    ]
   },
   {
@@ -115,16 +94,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = requests.post(cell_sets_URL, json=cell_set, verify=False)\n",
-    "cell_set = response.json()"
+    "response = requests.get(cell_sets_URL, verify=False)\n",
+    "cell_sets = response.json()[\"cell_sets\"]\n",
+    "sample_cell_sets = {}\n",
+    "\n",
+    "for sample_name in SAMPLES:\n",
+    "    \n",
+    "    for cell_set in cell_sets:\n",
+    "        \n",
+    "        if cell_set[\"name\"] == sample_name:\n",
+    "            sample_cell_sets[sample_name] = cell_set\n",
+    "            break"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -150,6 +131,7 @@
     "    sequencing_run[\"type\"] = \"local_BCLs\"\n",
     "    sequencing_run[\"name\"] = SEQUENCING_RUN_NAME\n",
     "    sequencing_run[\"status\"] = \"available\"\n",
+    "    sequencing_run[\"cell_sets\"] = []\n",
     "    \n",
     "    print(\"Creating sequencing run %s\" % SEQUENCING_RUN_NAME)\n",
     "    response = requests.post(sequencing_runs_URL, json=sequencing_run, verify=False)\n",
@@ -165,6 +147,32 @@
     "read_sets_URL = HOST_URL + \"read_sets\"\n",
     "response = requests.get(read_sets_URL, verify=False)\n",
     "read_sets = response.json()[\"read_sets\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "S3_SEARCH_DIRECTORY = \"reads/201204_A01102_0112_BHT372DSXY_RNA/TDMT01/\"\n",
+    "\n",
+    "read_sets_URL = HOST_URL + \"read_sets\"\n",
+    "response = requests.get(read_sets_URL, verify=False)\n",
+    "read_sets = response.json()[\"read_sets\"]\n",
+    "\n",
+    "out = os.popen('aws s3 ls s3://scrap-dm/%s' % S3_SEARCH_DIRECTORY).read() # list all files found in an S3 folder\n",
+    "out = out.split('\\n') # create a list from string output\n",
+    "out = [x.split(' ')[-1] for x in out if x.endswith('gz')] # only get .gz elements and file names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out"
    ]
   },
   {
@@ -313,7 +321,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "for sample_index, sample_name in enumerate(SAMPLES):\n",
@@ -332,7 +342,7 @@
     "        \n",
     "        print(\"Creating read set %s\" % sample_name)\n",
     "        \n",
-    "        response = requests.post(read_sets_URL, json=cell_set, verify=False)\n",
+    "        response = requests.post(read_sets_URL, json=read_set, verify=False)\n",
     "        read_set = response.json()\n",
     "        read_set[\"sequencing_run_id\"] = sequencing_run_id\n",
     "        read_set[\"status\"] = \"available\"\n",
@@ -382,6 +392,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "read_set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -401,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
